# Trade-Simulator

./: .gitignore  pyproject.toml
api/: crud.py  database.py  logging.conf  main.py  models.py  schemas.py
data/: .gitignore  active_trades.json  trades.sqlite
